Mon Sep 23 16:22 2013 CDT
    * lib/user.js: distinguish search result return packets with a 'source'
      field that specifies where the item came from (e.g 'yt' for youtube
      search, 'library' for library search)
    * www/assets/js/callbacks.js: account for the change in lib/user.js
      which adds a 'source' field to library search results
    * www/assets/js/util.js: don't add delete buttons for youtube search
      results.  Apparently people keep clicking them...

Sat Sep 21 23:53 2013 CDT
    * lib/playlist.js, www/assets/js/player.js: Modify the server lead
      function to have a 3 second lead-in period (to allow buffering).
      Videos start at -3 seconds; the client is paused until the time
      reaches 0 seconds.

Sat Sep 21 02:21 2013 CDT
    * www/assets/js/ui.js, www/assets/js/ui.js, www/assets/js/util.js,
      www/channel.html, www/assets/css/ytsync.css: Add quick buttons for
      modflair and adminflair

Sat Sep 21 00:29 2013 CDT
    * www/assets/js/util.js: support a "Nobody" permission level (set
      arbitrarily high)

Sat Sep 21 00:23 2013 CDT
    * www/assets/js/callbacks.js, www/assets/css/ytsync.css: make it more
      obvious which option was voted for

Sat Sep 21 00:08 2013 CDT
    * lib/playlist.js: Make .clean(filter) an instance method
    * lib/chatcommand.js: Make a few minor changes to unbibium's /clean

Wed Sep 18 18:26 2013 CDT
    * lib/user.js: Change channel checks to include checking for whether
      the channel is dead

Wed Sep 18 18:14 2013 CDT
    * lib/channel.js: Add a bunch of checks to prevent callbacks from doing
      things with a dead channel
    * tests/channelDeadRace.js: Add a few client tests that cause exceptions
      in the pre-patched channel code

Tue Sep 17 22:24 2013 CDT
    * lib/user.js: Fix what I assume was a race condition that caused an error message
      when a user's login callback fired after the channel unloaded.

Tue Sep 17 13:16 2013 CDT